Ny redigeret udgave

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 <ul class="navigation">
 	<li><a href="index.html#top">Home</a></li>
-	<li><a href="#contact">Contact</a></li>
-	<li><a href="#resources">Resources</a></li>
 	<li><a href="cv.html">Curriculum Vitae</a></li>
 </ul>
 
@@ -31,12 +29,12 @@ of how to get in touch with me.</p>
 
 <table class="contactinfo">
 	<tr id="nameentry">
-		<td id="key">Name:</td>
-		<td id="value">Brian Johnsen</td>
+		<td>Name:</td>
+		<td>Brian Johnsen</td>
 	</tr>
 	<tr>
-		<td id="key">Email:</td>
-		<td id="value"><script language="JavaScript"
+		<td>Email:</td>
+		<td><script language="JavaScript"
 			type="text/javascript">
 					<!--
 						var string1 = "getintouch";
@@ -50,23 +48,11 @@ of how to get in touch with me.</p>
 				</script></td>
 	</tr>
 	<tr>
-		<td id="key">Social:</td>
-		<td id="value"><a href="http://dk.linkedin.com/in/brianjohnsen">LinkedIn profile</a>, <a href="http://www.facebook.com/#!/profile.php?id=100000857866802">Facebook profile</a></td>
+		<td>Social:</td>
+		<td><a href="https://www.linkedin.com/in/brianjohnsen/">LinkedIn profile</a></td>
 	</tr>
 	
 </table>
-
-
-<h2 id="resources">Related resources</h2>
-
-<p>The following lists interesting resources.</p>
-
-<ul class="resourcelist">
-	<li><a href="http://groovy.codehaus.org/">Groovy</a> - dynamic extension to Java</li>
-	<li><a href="http://grails.org/">Grails</a> - brilliant web framework</li>
-	<li><a href="http://www.pragmaticprogrammer.com/">Pragmatic Programmers</a> - the way software should be done</li>
-	<li><a href="http://www.theserverside.com/">TheServerSide</a> - an enterprise Java community</li>
-</ul>
 
 
 
