--- a/marathon/marathon.html
+++ b/marathon/marathon.html
@@ -26,7 +26,7 @@
         <dl class="marathon_list">
 		    <dt class="headline">2006</dt><dd><a href="./HCA_Marathon_2006.pdf">HCA Marathon</a></dd> 
 		    <dt class="headline">2002</dt><dd><a href="./Copenhagen_Marathon_2002.pdf">Copenhagen Marathon</a></dd> 
-		    <dt class="headline">2000</dt><dd><a href="../not.implemented.yet.html">Copenhagen Marathon</a> (mangler diplom)</dd> 
+		    <dt class="headline">2000</dt><dd><a href="#">Copenhagen Marathon</a> (info missing)</dd>
 		</dl>
             
         <script language="javascript">footer();</script>
