--- a/master/courses.htm
+++ b/master/courses.htm
@@ -737,7 +737,7 @@ font-style:normal'>Completed Courses</h1>
  </tr>
  <tr height=19 style='height:14.25pt'>
   <td height=19 class=xl284745 style='height:14.25pt'>BSc</td>
-  <td class=xl334745 style='border-left:none'><a href="bachelor.html"><span
+  <td class=xl334745 style='border-left:none'><a href="../bachelor/bachelor.html"><span
   style='font-size:11.0pt;font-family:Arial, sans-serif;mso-font-charset:0'>Bachelor
   Thesis</span></a></td>
   <td class=xl294745 style='border-left:none' x:num>10</td>
