--- a/bachelor/bachelor.html
+++ b/bachelor/bachelor.html
@@ -4,8 +4,8 @@
 <head>
 <title>Bachelor Thesis of Brian Johnsen</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-<script src="script.js" type=""></script>
+<link rel="stylesheet" type="text/css" href="../style.css" />
+<script src="../script.js" type=""></script>
 </head>
 
 <body>
@@ -13,8 +13,8 @@
 <div id="wrapper">
 
 <ul class="navigation">
-	<li><a href="index.html#top">Home</a></li>
-	<li><a href="cv.html#top">CV</a></li>
+	<li><a href="../index.html#top">Home</a></li>
+	<li><a href="../cv.html#top">CV</a></li>
 	<li><a href="#diploma">Diploma</a></li>
 	<li><a href="#thesis">Bachelor Thesis</a></li>
 </ul>
@@ -22,11 +22,6 @@
 <p class="description">This page contains information regarding my
 Bachelor Thesis - "Interactive LaTeX to HTML/MathML translation".</p>
 
-
-<h2 id="diploma">Diploma</h2>
-<ul class="thesis_list">
-	<li><a href="not.implemented.yet.html">Bachelor Diploma</a></li>
-</ul>
 
 
 <h2 id="thesis">Bachelor Thesis</h2>
