--- a/cv.html
+++ b/cv.html
@@ -17,22 +17,21 @@
 	<li><a href="#personal">Personal</a></li>
 	<li><a href="#education">Education</a></li>
 	<li><a href="#prof">Professional Record</a></li>
-	<li><a href="#skills">Professional Skills</a></li>
 	<li><a href="#lang">Language Skills</a></li>
 </ul>
 
 
 <h2 id="cv_heading">Curriculum Vitae</h2>
-<div><img id="mypicture" src="BRIANJ.jpg" alt="My picture"
-	title="My Picture" /></div>
+<div><img id="mypicture" src="images/BRIANJ.jpg" alt="My picture"
+          title="My Picture" /></div>
 
 <h4 id="personal">Personal Information</h4>
 <dl>
 	<dt class="headline">1973</dt>
 	<dd>Born March 19<sup>th</sup> 1973 in Silkeborg, Denmark.</dd>
 	<dt class="headline">1989-2007</dt>
-	<dd>Deejaying - playing records and CD's at various discotheques
-	all over Denmark, including Faroe Islands, plus in Sweden, Norway, and
+	<dd>Deejaying - playing records and CD's at various clubs
+	all over Denmark, including Faroe Islands, plus Sweden, Norway, and
 	Austria. Professional career from 1992 to 2007, parallel with attending
 	the university.</dd>
 	<dt class="headline">2000-2006</dt>
@@ -52,25 +51,20 @@
 <dl>
 	<dt class="headline">1979-1989</dt>
 	<dd>Attended elementary school; 1<sup>th</sup> to 10<sup>th</sup>
-	grade at <a href="http://www.nordre.skole.silkeborg.dk">Nordre
-	Skole</a>, Silkeborg.</dd>
+	grade at Nordre Skole, Silkeborg.</dd>
 	<dt class="headline">1994-1997</dt>
-	<dd>Attended high school at <a href="http://www.fyns-hf-kursus.dk">Fyns
-	HF-kursus</a> and <a href="http://vucfyn.dk">VUC Fyn</a>. Majored in
+	<dd>Attended high school at Fyns HF-kursus and VUC Fyn. Majored in
 	mathematics, physics, chemistry, and english.</dd>
 	<dt class="headline">1997-2007</dt>
 	<dd>Enrolled in Master of Science in Natural Science at the <a
 		href="http://www.mip.sdu.dk">The Maersk Mc-Kinney Moller Institute</a>
 	- <a href="http://www.sdu.dk">University of Southern Denmark</a>.</dd>
 	<dt class="headline">2005</dt>
-	<dd>Bachelor of Science (B.Sc.) - Applied Mathematics and Software
-	Production. Do you want to know <a href="bachelor.html">more?</a></dd>
-	<dt class="headline">2005-2006</dt>
-	<dd>Attended the <a href="http://jaoo.dk/">JAOO Conference</a> in
-	Aarhus.</dd>
+	<dd><a href="bachelor/bachelor.html">Bachelor of Science (B.Sc.) - Applied Mathematics and Software
+        Production.</a></dd>
 	<dt class="headline">2007</dt>
-	<dd>Master of Science (M.Sc.) - Applied Mathematics and Software
-	Production. Do you want to know <a href="master.html">more?</a></dd>
+	<dd><a href="master/master.html">Master of Science (M.Sc.) - Applied Mathematics and Software
+        Production.</a></dd>
 </dl>
 
 
@@ -79,128 +73,9 @@
 
 <h4 id="prof">Professional Record</h4>
 <dl>
-	<dt class="headline">2005-2007</dt>
-	<dd>Programmer and systems developer at <a
-		href="http://www.stat.sdu.dk/matstat/">The Mathematical Statistics
-	Group</a>.</dd>
-	<dt class="headline">2006</dt>
-	<dd>Founded <a href="http://www.gennemtaenkt.dk/">Gennemtænkt
-	IT</a>(<a href="http://www.deepthought.dk">Deepthought Development</a>), a
-	software development and consulting company. Co-founded with <a
-		href="http://mortenkristiansen.dk">M.Sc. Morten Kristiansen.</a></dd>
-	<dt class="headline">2006-2007</dt>
-	<dd>Software developer at <a href="http://www.risingtide.dk">Rising
-	Tide</a>.</dd>
-	<dt class="headline">2007-2008</dt>
-	<dd>Systems developer and system architect at <a
-		href="http://teamonline.dk/">Team Online</a>.</dd>
-	<dt class="headline">2008-2009</dt>
-	<dd>Software developer at <a href="http://www.aloc.dk/">ALOC</a>.</dd>
-	<dt class="headline">2009</dt>
-	<dd>Full time architect and software developer in <a
-		href="http://www.gennemtaenkt.dk/">Gennemtænkt IT</a>.</dd>
+	<dt class="headline">2005-present</dt>
+	<dd>Please check out my experience and skills at my <a href="https://www.linkedin.com/in/brianjohnsen/">LinkedIn profile</a></dd>
 </dl>
-
-
-<hr />
-
-
-<h4 id="skills">Professional Skills</h4>
-<dl>
-
-	<!-- ###########################################################-->
-	<!-- PROGRAMMING -->
-	<!-- ###########################################################-->
-	<dt class="headline">Programming</dt>
-	<dd><strong>Java</strong> - Extensive experience in Java SE and
-	EE, both at professional level. Experience include knowledge of
-	advanced topics, such as, reflection, concurrent multi-threaded
-	programming, and digital signatures and cryptography. Worked with
-	several open source frameworks, e.g. <a
-		href="http://www.springframework.org/">Spring</a>, <a
-		href="http://www.hibernate.org/">Hibernate</a>, <a
-		href="http://activemq.apache.org/">ActiveMQ</a>, <a
-		href="http://code.google.com/webtoolkit/">GoogleWebToolkit</a>, and
-	several others.</dd>
-	<dd><strong>Groovy & Grails</strong> - Developed, extended, and
-	maintains several professional projects in <a
-		href="http://groovy.codehaus.org/">Groovy</a> & <a
-		href="http://grails.org/">Grails</a>. Groovy and Grails are the
-	backbone in most of the projects done by Gennemtænkt IT.</dd>
-	<dd><strong>C#</strong> - Programming experience from developing
-	high load desktop clients.</dd>
-	<dd><strong>SQL</strong> - Created and managed several relational
-	databases using SQL, for professional use as well as study projects.</dd>
-	<dd><strong>C/C++</strong> - Programmed several study projects.</dd>
-	<dd><strong>Ruby</strong> - Study group experience.</dd>
-	<dd><strong>Python</strong> - Programmed several study projects.</dd>
-
-	<!-- ###########################################################-->
-	<!-- DEVELOPMENT -->
-	<!-- ###########################################################-->
-	<dt class="headline">Development</dt>
-	<dd><strong>Platforms</strong> - Experience with several
-	development platforms, including:
-	<ul>
-		<li><a href="http://www.eclipse.org/">Eclipse</a>: The eclipse
-		IDE, plus multiple extensions to the platform.</li>
-		<li><a href="http://www.netbeans.org/">NetBeans</a>: The NetBeans
-		IDE, open sourced from <a href="http://www.sun.com/">SUN</a>.</li>
-		<li><a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a>:
-		The IntelliJ IDE from JetBrains.</li>
-		<li><a href="http://www.rational.com/">Rational</a>: Rose, XDE,
-		WebSphere, and Software Modeler, and Software Architect.</li>
-		<li><a
-			href="http://msdn.microsoft.com/en-us/vstudio/default.aspx">MS
-		Visual Studio</a>: The .NET IDE from Microsoft.</li>
-	</ul>
-	</dd>
-	<dd><strong>Processes</strong> - Experience from working with
-	several different development prosesses, including:
-	<ul>
-		<li><a href="http://www.rational.com/"><strong>Rational
-		Unified Process</strong></a> - Experience from several study projects.</li>
-		<li><a href="http://agilemanifesto.org/"><strong>Agile
-		processes</strong></a> - Experience from both study projects and professional
-		development. Attended several talks on the topic at the <a
-			href="http://jaoo.dk/">JAOO Conference</a>. Working experience
-		includes <a href="http://www.xprogramming.com/">XP</a>, <a
-			href="http://www.controlchaos.com/">SCRUM</a>, <a
-			href="http://alistair.cockburn.us/index.php/Main_Page">Crystal
-		Clear</a>, and hybrids.</li>
-	</ul>
-	</dd>
-	<dd><strong>Software Quality</strong> - Experience in securing
-	high software quality through the use of continuous unit and
-	integration testing. Working knowledge with:
-	<ul>
-		<li>Unit testing - The <a href="http://www.junit.org/">JUnit</a>
-		framework, and, to a lesser extent, also <a
-			href="http://www.nunit.org/index.php">NUnit</a>.</li>
-		<li>Integration testing - The <a href="http://fit.c2.com/">FIT</a>
-		framework.</li>
-		<li>Continuous integration - <a
-			href="http://hudson-ci.org/">Hudson</a>
-		continuous integration server.</li>
-	</ul>
-	</dd>
-
-
-	<!-- ###########################################################-->
-	<!-- SPECIAL USER SKILLS -->
-	<!-- ###########################################################-->
-	<dt class="headline">Mathematics</dt>
-	<dd><strong>Mathematics in software</strong> - Working knowledge from applying
-	mathematics to solve software problems, such as, transformations in 3D
-	space, vehicle routing, and artificial intelligence.</dd>
-	<dd><strong>Math software</strong> - Experience from using
-	the following mathematical software packages: <a
-		href="http://www.wolfram.com/">Mathematica</a>, <a
-		href="http://www.mathworks.com/">Matlab</a>, and <a
-		href="http://www.maplesoft.com/">Maple</a>.</dd>
-
-</dl>
-
 
 
 <hr />
