--- a/master/master.html
+++ b/master/master.html
@@ -4,8 +4,8 @@
 <head>
 <title>Master Thesis of Brian Johnsen</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-<script src="script.js" type=""></script>
+<link rel="stylesheet" type="text/css" href="../style.css" />
+<script src="../script.js" type=""></script>
 </head>
 
 <body>
@@ -13,8 +13,8 @@
 <div id="wrapper">
 
 <ul class="navigation">
-	<li><a href="index.html#top">Home</a></li>
-	<li><a href="cv.html#top">CV</a></li>
+	<li><a href="../index.html#top">Home</a></li>
+	<li><a href="../cv.html#top">CV</a></li>
 	<li><a href="#diploma">Diploma</a></li>
 	<li><a href="#thesis">Thesis</a></li>
 	<li><a href="#courses">Completed Courses</a></li>
